api-service: Added more explanative commends to all docker related files

--- a/api-service/Dockerfile
+++ b/api-service/Dockerfile
@@ -19,11 +19,14 @@ ENV PYTHONUNBUFFERED=1
 # Ensure we have an up to date baseline, install dependencies and
 # create a user so we don't run the app as root
 RUN set -ex; \
+    # We create a bunch of directories that are need, they don't know why
     for i in $(seq 1 8); do mkdir -p "/usr/share/man/man${i}"; done && \
     apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y --no-install-recommends $DEBIAN_PACKAGES && \
     apt-get clean && \
+
+    # Remove temp directories
     rm -rf /var/lib/apt/lists/* && \
     pip install --no-cache-dir --upgrade pip && \
     pip install pipenv && \
@@ -43,6 +46,7 @@ USER app
 WORKDIR /app
 
 # Install python packages
+# Make the new user 'app' owner of the Pipfile and Pipfile.lock
 ADD --chown=app:app Pipfile Pipfile.lock /app/
 
 RUN pipenv sync
