Intergrated gcp bucket connection and simple get request

--- a/api-service/Pipfile
+++ b/api-service/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 uvicorn = "*"
 fastapi = "*"
+google-auth = "*"
+google-cloud-storage = "*"
 
 [requires]
 python_version = "3.8"
