Fix m1 sillicon macs, now using --platform=linux/amd64

--- a/api-service/Pipfile
+++ b/api-service/Pipfile
@@ -10,6 +10,8 @@ uvicorn = "*"
 fastapi = "*"
 google-auth = "*"
 google-cloud-storage = "*"
+pandas = "*"
+tensorflow = "*"
 
 [requires]
 python_version = "3.8"
