--- a/api-service/Pipfile
+++ b/api-service/Pipfile
@@ -11,7 +11,7 @@ fastapi = "*"
 google-auth = "*"
 google-cloud-storage = "*"
 pandas = "*"
-tensorflow = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
