--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,8 @@
 geckodriver.log
 /persistent-folder
 /secrets
-/api-service
+/api-service/.env
 /data-collector/docker-shell.sh
-/frontend-simple
 /frontend-react
 /database-server
 /deployment
