Added model.py and paths for it, along with fix to run it locally

--- a/api-service/Pipfile
+++ b/api-service/Pipfile
@@ -12,6 +12,8 @@ google-auth = "*"
 google-cloud-storage = "*"
 pandas = "*"
 python-dotenv = "*"
+tensorflow-hub = "*"
+python-multipart = "*"
 
 [requires]
 python_version = "3.8"
