React frontend has been added

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 geckodriver.log
 /persistent-folder
 /secrets
-/api-service/.env
 /data-collector/docker-shell.sh
-/frontend-react
 /database-server
 /deployment
+
+
+# Neede because locally used specific macos versions of tf
+/api-service/.env
+/api-service/Pipfile.lock
