Changed tf version because 2.6.0 has issues and macos mac version is that one

--- a/api-service/Pipfile
+++ b/api-service/Pipfile
@@ -12,9 +12,8 @@ google-auth = "*"
 google-cloud-storage = "*"
 pandas = "*"
 python-dotenv = "*"
-tensorflow-hub = "*"
 python-multipart = "*"
-tensorflow-macos = "*"
+tensorflow-macos = "<2.6"
 tensorflow-metal = "*"
 
 [requires]
